# bookstore

./: .env.dev  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
